writing: an article + fix: About rewrite and how is that i just now really found out that <br> was not supposed to be used for spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,19 @@ body, html {
     border: 0;
 }
 
+.space-1 {
+    margin-top: 1rem;
+}
+
+.space-2 {
+    margin-top: 2rem;
+}
+
+.space-3 {
+    margin-top: 3rem;
+}
+
+
 .d-none {
     display: none;
 }
